src/test/ui/error-codes/E0152.stderr
error[E0152]: found duplicate lang item `arc`
  --> $DIR/E0152.rs:4:1
   |
LL | struct Foo;
   | ^^^^^^^^^^^
   |
   = note: the lang item is first defined in crate `alloc` (which `std` depends on)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0152`.
