src/test/ui/error-codes/E0152.rs
#![feature(lang_items)]

#[lang = "owned_box"]
struct Foo; //~ ERROR E0152

fn main() {
}
